# solo

./: .gitignore  CMakeLists.txt  Doxyfile.in  colcon.pkg  package.xml  readme.md  setup.py
.github/workflows/: build_master.yml  build_pr.yml
cmake/: eigen.cmake  pkg-config.cmake
config/: finger.yml  finger_240.yml  finger_legacy.yml  onejoint.yml  trifinger.yml  twojoint.yml
demos/: CMakeLists.txt  common_demo_header.hpp  demo_arduino_slider.cpp  demo_calibration.cpp  demo_data_logging.py  demo_disentanglement_platform.cpp  demo_disentanglement_ros.cpp  demo_fake_finger.py  demo_finger.cpp  demo_finger_forward_kinematics.py  demo_finger_master_slave.cpp  demo_finger_position_control.cpp  demo_finger_print_position.py  demo_finger_torque_control.cpp  demo_force_optimization.py  demo_onejoint_print_position.py  demo_onejoint_robot.py  demo_quadruped.cpp  demo_real_finger.py  demo_solo.cpp  demo_solo12.cpp  demo_solo12_calibration.cpp  demo_solo12_hwp.py  demo_solo8.cpp  demo_solo8_calibration.cpp  demo_solo8_calibration.py  demo_solo8ti.cpp  demo_solo_calibration.cpp  demo_sparse_position_control.py  demo_stacking_simulation.py  demo_stuggihop.cpp  demo_test_bench_8_motors.cpp  demo_teststand.cpp  demo_teststand_calibration.cpp  demo_trifinger.py  demo_trifinger_impedance_control.py  demo_twojoint_print_position.py  demo_twojoint_robot.py  example_pd.cpp  nyu_finger.ipynb  (+7 more)
demos/basic_simulator/: basic_simulator.py
demos/basic_simulator/model/meshes/: box.stl  cylinder.stl  sphere.stl
demos/basic_simulator/model/urdf/: free_flyer.urdf
demos/finger/: demo_finger.cpp
demos/test/: camera_readings.py  force_optimisation.py  main.py
demos/test_bench_8_motors/: demo_test_bench_8_motors.cpp
doc/: homing.md
include/: .clang-format
include/blmc_robots/: blmc_joint_module.hpp  common_header.hh  common_header.hpp  common_programs_header.hpp  disentanglement_platform.hpp  fake_finger_driver.hpp  finger.hpp  finger_interface.hpp  n_joint_blmc_robot_driver.hpp  n_joint_blmc_robot_driver.hxx  nyu_finger.hpp  one_joint_driver.hpp  quadruped.hpp  random_finger_driver.hpp  real_disentanglement_platform.hpp  real_finger.hpp  real_finger_driver.hpp  single_leg.hpp  single_motor.hpp  slider.hpp  solo.hpp  solo12.hpp  solo8.hpp  solo8_ti.hpp  solo8ti.hpp  spi_joint_module.hpp  stuggihop.hpp  test_bench_8_motors.hpp  teststand.hpp  two_joint_driver.hpp
include/blmc_robots/blmc_joint_module/: blmc_joint_module.hpp
include/blmc_robots/blmc_module/: blmc_module.hpp
include/blmc_robots/finger/: finger.hpp
include/blmc_robots/mathematics/: polynome.hpp  polynome.hxx
include/blmc_robots/slider/: slider.hpp
include/blmc_robots/test_bench_8_motors/: test_bench_8_motors.hh
include/solo/: clamp.hpp  common_header.hpp  common_header_ti.hpp  common_programs_header.hpp  slider.hpp  solo12.hpp  solo8.hpp  solo8ti.hpp  solox.hpp  spi_joint_module.hpp
include/solo/dynamic_graph_manager/: dgm_solo12.hpp  dgm_solo8.hpp  dgm_solo8ti.hpp  hwp_solo12.hpp
msg/: RobotData.msg
python/blmc_robots/: __init__.py  logger.py  robot.py
python/solo/: dg_bullet_solo.py  solo12_bullet.py  solo8_bullet.py  vicon_client_bullet.py
scripts/: check_finger_position_control_error.py  initialize_teststand_can_bus.sh  optimized_forces_plots.py  plot_data.py  run_onejoint_tests.py  run_twojoint_tests.py  solo8_calibration.py  two_joint_friction_calibration.py
src/: CMakeLists.txt  blmc_joint_module.cpp  finger.cpp  nyu_finger.cpp  quadruped.cpp  real_finger.cpp  single_leg.cpp  single_motor.cpp  solo.cpp  solo12.cpp  solo8.cpp  solo8_ti.cpp  solo8ti.cpp  stuggihop.cpp  test_bench_8_motors.cpp  teststand.cpp
src/blmc_robots/: __init__.py
src/dynamic_graph_manager/: dg_main_solo12.cpp  dg_main_solo8.cpp  dg_main_solo8ti.cpp  dgm_solo12.cpp  dgm_solo8.cpp  dgm_solo8ti.cpp  hwp_solo12.cpp
src/finger/: finger.cpp
src/mathematics/: polynome.cpp
src/programs/: can_encoder_index_test.cpp  solo12_hardware_calibration.cpp  solo8_hardware_calibration.cpp  solo8ti_hardware_calibration.cpp  solo_hardware_calibration.cpp  teststand_hardware_calibration.cpp
src/test_bench_8_motors/: test_bench_8_motors.cpp
srcpy/: CMakeLists.txt  py_nyu_finger.cpp  py_one_joint.cpp  py_real_finger.cpp  py_single_leg.cpp  py_solo12.cpp  py_solo8.cpp  py_two_joint.cpp  solo12_hwp.cpp
tests/: CMakeLists.txt  main.cpp  test_n_joint_blmc_robot_driver.cpp  test_polynomes.cpp  test_process_action.cpp
