<?xml version="1.0"?>
<package>
  <name>blmc_robots</name>
  <version>1.0.0</version>
  <description>
    This project implements a small example when using the dynamic graph
  </description>
  <author email="wgondal@tue.mpg.de">Waleed Gondal</author>
  <maintainer email="wgondal@tue.mpg.de">Waleed Gondal</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend> ati_ft_sensor </build_depend>
  <run_depend>   ati_ft_sensor </run_depend>

  <build_depend> blmc_drivers </build_depend>
  <run_depend>   blmc_drivers </run_depend>

  <build_depend> real_time_tools </build_depend>
  <run_depend>   real_time_tools </run_depend>

  <build_depend> std_msgs </build_depend>
  <run_depend>   std_msgs </run_depend>

  <build_depend> roscpp </build_depend>
  <run_depend>   roscpp </run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  


</package>
