<?xml version="1.0"?>
<package format="2">
  <name>blmc_robots</name>
  <version>1.0.0</version>
  <description>Interfaces to the BLMC robots.</description>
  <author email="mnaveau@tue.mpg.de">Maximilien Naveau</author>
  <maintainer email="mnaveau@tue.mpg.de">Maximilien Naveau</maintainer>
  <maintainer email="felix.widmaier@tuebingen.mpg.de">Felix Widmaier</maintainer>
  <license>BSD 3-clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ati_ft_sensor</depend>
  <depend>blmc_drivers</depend>
  <depend>master_board_sdk_catkin</depend>
  <depend>real_time_tools</depend>
  <depend>mpi_cmake_modules</depend>
  <depend>robot_interfaces</depend>
  <depend>pybind11_catkin</depend>
  <depend>yaml_cpp_catkin</depend>

  <depend>eigen</depend>
  <depend>yaml-cpp</depend>

</package>
